force-app/main/default/objects/Produtos_Faturados__c/Produtos_Faturados__c.object-meta.xml
<CustomObject>
    <label>Produto Faturado</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>N° do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos Faturados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>