force-app/main/default/objects/Produtos_Faturados__c/fields/Faturamento_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Faturamento_Relacionado__c</fullName>
    <label>Faturamento Relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Faturamento__c.Oportunidade__c</field>
            <operation>equals</operation>
            <valueField>$Source.Oportunidade_Relacionada__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Faturamento__c</referenceTo>
    <relationshipLabel>Produtos Faturados</relationshipLabel>
    <relationshipName>Produtos_Faturados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>