force-app/main/default/objects/Produtos_Faturados__c/fields/Oportunidade_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade_Relacionada__c</fullName>
    <label>Oportunidade Relacionada</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Produtos Faturados</relationshipLabel>
    <relationshipName>Produtos_Faturados</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>