force-app/main/default/objects/Produtos_Faturados__c/fields/Produto_Faturado__c.field-meta.xml
<CustomField>
    <fullName>Produto_Faturado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto Faturado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos Faturados</relationshipLabel>
    <relationshipName>Produtos_Faturados</relationshipName>
    <type>Lookup</type>
</CustomField>